# shopbot_admin

./: .gitignore  README.md  pyproject.toml
apps/cart/: models.py
apps/cart/migrations/: 0001_initial.py
apps/catalog/: admin.py  apps.py  models.py  signals.py
apps/catalog/migrations/: 0001_initial.py  0002_product_quantity.py  0002_remove_category_catalog_cat_name_39f70b_idx_and_more.py  0003_remove_subcategory_catalog_sub_name_5ec2cb_idx_and_more.py
apps/clients/: admin.py  models.py
apps/clients/migrations/: 0001_initial.py
apps/orders/: models.py
config/: settings.py  urls.py
